Added the initial page(homepage)

--- a/ecommerce_website/store/templates/store/base.html
+++ b/ecommerce_website/store/templates/store/base.html
@@ -26,7 +26,7 @@
     <nav class="navbar navbar-expand-lg bg-primary justify-content-center">
 
         <a class="navbar-brand main-heading text-white" href="{% url 'store' %}">
-        &nbsp; &nbsp; Edenthought
+<!-- Title -->    &nbsp; &nbsp; Edenthought
         </a>
 
         <button
@@ -45,12 +45,12 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white" href="#" id="navbarDropdown" role="button"
                         data-bs-toggle="dropdown" aria-expanded="false">
-                    Categories
+<!-- Categories dropdown --> Categories
                     </a>
 
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li>
-                            <a class="dropdown-item" href="{% url 'store' %}"> All </a>
+<!-- Items of the dropdown -->  <a class="dropdown-item" href="{% url 'store' %}"> All </a>
                         </li>
                     </ul>
                 </li>
