Created category view

--- a/ecommerce_website/store/templates/store/base.html
+++ b/ecommerce_website/store/templates/store/base.html
@@ -52,6 +52,11 @@
                         <li>
 <!-- Items of the dropdown -->  <a class="dropdown-item" href="{% url 'store' %}"> All </a>
                         </li>
+                        {% for category in all_categories %}
+                        <li>
+                            <a class="dropdown-item" href=""> {{ category.name | capfirst }} </a>
+                        </li>
+                        {% endfor %}
                     </ul>
                 </li>
             </ul>
