--- a/ecommerce_website/store/templates/store/base.html
+++ b/ecommerce_website/store/templates/store/base.html
@@ -69,13 +69,13 @@
                 <li class="nav-item">
                     <a class="btn btn-alert navbar-btn text-white" type="button"  href="/"> Login </a>
                 </li>
-                &nbsp; &nbsp; &nbsp;
+
                 <li class="nav-item">
-                    <a type="button" role="button" href="/" class="btn btn-outline-secondary">
+                    <a type="button" role="button" href="{% url 'cart-summary' %}" class="btn btn-outline-secondary">
                         <i class="fa fa-shopping-cart" aria-hidden="true"> </i>
                     </a>
                 </li>
-                &nbsp; &nbsp; &nbsp;
+
             </ul>
         </div>
     </nav>
