AJAX functionallity for cart
When Add is pressed in the product page, AJAX contacts the server to
retrieve data for the product without refreshing the page.

--- a/ecommerce_website/store/templates/store/product-info.html
+++ b/ecommerce_website/store/templates/store/product-info.html
@@ -68,4 +68,28 @@
     <br>
 </div>
 
+<script>
+    $(document).on('click', '#add-button', function(e){
+        e.preventDefault(); // ORevent the function from executing without a click
+
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart-add" %}',
+            data: {
+                product_id: $('#add-button').val(),
+                product_quantity: $('#select option:selected').text(),
+                csrfmiddlewaretoken: "{{csrf_token}}",
+                action: 'post'
+            },
+
+            success: function(json) {hh
+            },
+
+            error: function(xhr, errmsg, err) {
+            }
+        });
+
+    })
+</script>
+
 {% endblock %}
