--- a/ecommerce_website/store/templates/store/product-info.html
+++ b/ecommerce_website/store/templates/store/product-info.html
@@ -53,7 +53,7 @@
                             </div>
 
                             <div class="col-6 text-end">
-                                <button type="button" id="add-button" value="" class="btn btn-secondary btn-sm">
+                                <button type="button" id="add-button" value="{{ product.id }}" class="btn btn-secondary btn-sm">
                                 Add to cart
                                 </button>
 
@@ -82,7 +82,8 @@
                 action: 'post'
             },
 
-            success: function(json) {hh
+            success: function(json) {
+                console.log(json)
             },
 
             error: function(xhr, errmsg, err) {
