Added quantity number for cart

--- a/ecommerce_website/store/templates/store/product-info.html
+++ b/ecommerce_website/store/templates/store/product-info.html
@@ -70,7 +70,7 @@
 
 <script>
     $(document).on('click', '#add-button', function(e){
-        e.preventDefault(); // ORevent the function from executing without a click
+        e.preventDefault(); // Prevent the function from executing without a click
 
         $.ajax({
             type: 'POST',
