Product prices are now calculated based on quantity

--- a/ecommerce_website/cart/templates/cart/cart-summary.html
+++ b/ecommerce_website/cart/templates/cart/cart-summary.html
@@ -1,5 +1,6 @@
 {% include "store/base.html" %}
 
+{% load mathfilters %}
 
 {% load static %}
 
@@ -31,7 +32,7 @@
             <div class="col border-bottom">
                 <div class="row p-3">
                 <div class="col-6"> Product </div>
-                <div class="col-6 text-end"><span class="h6 fw-bold">$ {{ product.price }} </span></div>
+                <div class="col-6 text-end"><span class="h6 fw-bold">$ {{ product.price|mul:item.qty }} </span></div>
               </div>
             </div>
 
@@ -82,7 +83,7 @@
 
 
       <div class="col-12 text-end">
-        <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> <!-- cart.get_total --> </div></div>
+        <div class="h6 fw-bold"> Sub total: $ <div id="total" class="d-inline-flex"> {{ cart.get_total }} </div></div>
       </div>
 
 
