--- a/ecommerce_website/store/templates/store/product-info.html
+++ b/ecommerce_website/store/templates/store/product-info.html
@@ -53,7 +53,7 @@
                             </div>
 
                             <div class="col-6 text-end">
-                                <button type="button" id="add-button" value="" class="btn btn-secondary btn-sm">
+                                <button type="button" id="add-button" value="{{product.id}}" class="btn btn-secondary btn-sm">
                                 Add to cart
                                 </button>
 
@@ -67,5 +67,28 @@
     </main>
     <br>
 </div>
+
+<script>
+    $(document).on('click', '#add-button', function(e){
+        e.preventDefault(); // prevent function execution without actual click
+
+        $.ajax({
+            type: 'POST',
+            url: '{% url "cart-add" %}',
+            data: {
+                product_id: $('$add-button').value(),
+                product_quantity: $('#select option:selected').value(),
+                csrfmiddlewaretoken: "{{csrf_token}}",
+                action: 'post'
+            },
+
+            success: function(json) {
+            },
+
+            error: function(xhr, errmsg, err) {
+            }
+        })
+    })
+</script>
 
 {% endblock %}
