--- a/ecommerce_website/store/templates/store/product-info.html
+++ b/ecommerce_website/store/templates/store/product-info.html
@@ -83,7 +83,8 @@
             },
 
             success: function(json) {
-                console.log(json)
+<!--                console.log(json)-->
+                document.getElementById("cart-qty").textContent = json.qty
             },
 
             error: function(xhr, errmsg, err) {
