--- a/ecommerce_website/cart/templates/cart/cart-summary.html
+++ b/ecommerce_website/cart/templates/cart/cart-summary.html
@@ -11,22 +11,25 @@
       <h1 class="h5"> Shopping cart </h1>
 	<hr>
       <br>
+
+      {% for item in cart %}
+      {% with product=item.product %}
       <div class="row mb-4 border product-item">
         <div class="col-md-3 col-lg-2 order-md-first bg-light">
-            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src=""> <!-- Product image -->
+            <img class="img-fluid mx-auto d-block" width="200px" alt="Responsive image" src="{{ product.image.url }}"> <!-- Product image -->
         </div>
 
 
         <div class="col-md-9 col-lg-10 ps-md-3 ps-lg-10">
           <a href="" class="text-decoration-none text-reset"> <!-- Product get absolute url -->
-            <h1 class="h5 pt-2"> <!-- Product title --> </h1>
+            <h1 class="h5 pt-2"> {{ product.title }} </h1>
           </a>
 
           <div class="border">
             <div class="col border-bottom">
                 <div class="row p-3">
                 <div class="col-6"> Product </div>
-                <div class="col-6 text-end"><span class="h6 fw-bold">$ <!-- Product price --> </span></div>
+                <div class="col-6 text-end"><span class="h6 fw-bold">$  {{ product.price }} </span></div>
               </div>
             </div>
 
@@ -71,7 +74,8 @@
             </div>
         </div>
     </div>
-
+      {% endwith %}
+      {% endfor %}
 
 
       <div class="col-12 text-end">
